@startuml
class Solution44 {
    +main(String[])
        'BufferedReader bufferedReader = new BufferedReader(new InputStreamReader(System.in));
        'ProductInventory inventory = new ProductInventory("data/exercise44_input.json");

        'while loop that keeps looping if the product is not found
            'prompt user for a product
            'call the inventory.findProduct(search)

        'print out the final output
}

class Parser {
    readFile()
        'parser object
        'store the product to an array
        'while loop that keeps iterating until no input is left
}

class Product{
    'attributes
    -name
    -price
    -quantity

    'constructor
    +Product(name,price,quantity)

     'getters
    +getName()
    +getPrice()
    +geQuantity()
}

class ProductInventory{
    'attribute
    +product()

    +findProduct()
    'return a string if a product is found or not

}

Solution44 *-- ProductInventory
ProductInventory -- Parser
ProductInventory -- Product
Parser -- Product
@enduml